# llmxy

./: .env.example  .gitignore  README.md  docker-compose.yml  dump.rdb
api/: Dockerfile  README.md  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 0001_initial.py  0002_indexes.py
api/app/: main.py
api/app/api/internal/: __init__.py  relay.py  translate.py
api/app/api/relay/: chat.py  embeddings.py  images.py  models_list.py
api/app/api/v1/: api_keys.py  auth.py  models.py  orders.py  plans.py  subscriptions.py  transport.py  usage.py
api/app/api/v1/admin/: channels.py  envoy.py  models.py  plans.py  routes.py  (+3 more)
api/app/core/: cache_invalidate.py  config.py  crypto.py  deps.py  redis.py  request_ctx.py  security.py  ttl_cache.py
api/app/data/geoip/: ATTRIBUTION.md
api/app/db/: __init__.py  session.py
api/app/models/: __init__.py
api/app/schemas/: __init__.py
api/app/scripts/: seed.py
api/app/services/: api_key.py  api_key_cache.py  api_key_expiry.py  billing.py  geo.py  higress.py  image_relay.py  quota.py  quota_cache.py  subscriptions_renewal.py
api/app/services/envoy/: __init__.py  access_log_buffer.py  als_server.py  bootstrap.py  config.py  remote_bootstrap.py  runtime.py  xds_server.py
api/app/services/payment/: __init__.py  alipay.py  base.py  stripe.py  wechat.py
api/app/services/providers/: __init__.py  anthropic.py  azure_openai.py  base.py  gemini.py  image_registry.py  openai.py  registry.py  router.py  smart_embedding.py
api/tests/: test_billing.py
api/var/envoy/ins1/: bootstrap.yaml  cds.yaml  lds.yaml  rds.yaml
(+63 files in other folders)
