[project]
name = "llmxy-api"
version = "0.1.0"
description = "LLM token relay API"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.29",
  "alembic>=1.13",
  "passlib[bcrypt]>=1.7",
  "bcrypt<4.1",
  "python-jose[cryptography]>=3.3",
  "httpx>=0.27",
  "redis>=5.0",
  "python-multipart>=0.0.9",
  "email-validator>=2.1",
  "tenacity>=8.2",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "ruff>=0.3", "httpx>=0.27"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
